--- a/MasavBL/App.config
+++ b/MasavBL/App.config
@@ -30,10 +30,10 @@
         <value>09376013</value>
       </setting>
       <setting name="ReportPath" serializeAs="String">
-        <value>D:\Report</value>
+        <value>C:\Report</value>
       </setting>
       <setting name="PdfReportPath" serializeAs="String">
-        <value>D:\PdfReport</value>
+        <value>C:\PdfReport</value>
       </setting>
       <setting name="ExcelReportPath" serializeAs="String">
         <value>D:\ExcelFiles</value>
