--- a/MasavBL/Properties/Settings.settings
+++ b/MasavBL/Properties/Settings.settings
@@ -12,10 +12,10 @@
       <Value Profile="(Default)">09376013</Value>
     </Setting>
     <Setting Name="ReportPath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">D:\Report</Value>
+      <Value Profile="(Default)">C:\Report</Value>
     </Setting>
     <Setting Name="PdfReportPath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">D:\PdfReport</Value>
+      <Value Profile="(Default)">C:\PdfReport</Value>
     </Setting>
     <Setting Name="ExcelReportPath" Type="System.String" Scope="Application">
       <Value Profile="(Default)">D:\ExcelFiles</Value>
