change location of files in config files

--- a/MasavBL/App.config
+++ b/MasavBL/App.config
@@ -30,13 +30,13 @@
         <value>09376013</value>
       </setting>
       <setting name="ReportPath" serializeAs="String">
-        <value>D:\Report</value>
+        <value>Z:\MSV\Report</value>
       </setting>
       <setting name="PdfReportPath" serializeAs="String">
-        <value>D:\PdfReport</value>
+        <value>Z:\MSV\PdfReport</value>
       </setting>
       <setting name="ExcelReportPath" serializeAs="String">
-        <value>D:\ExcelFiles</value>
+        <value>Z:\MSV\ExcelFiles</value>
       </setting>
     </MasavBL.Properties.Settings>
   </applicationSettings>
